...
              title: const Text(
                'Job List',
                key: Key('JobListTitle'),
              ),
              actions: [
                IconButton(
                  key: const Key('refreshJobListIcon'),
                  onPressed: refreshPage,
                  icon: const Icon(Icons.refresh),
                ),
              ],
            ),
            ProfileSearchSliver(
              key: const Key('ListJob ProfileSearchBar'),
              isAdmin: isAdmin,
              searchController: _searchController,
              searchFunction: _searchUpdateJobList,
              searchBarHint: "Enter a Job Site?",
              searchType: SearchType.viaTextInput,
              helpDialog: HelpHintType.listUser,
...
                              (MediaQuery.of(context).size.height / 7) * 4.5,
                          padding: const EdgeInsets.all(20),
                          width: double.infinity,
                          margin: const EdgeInsets.all(12),
                          child: Center(
                            child: LoadingAnimationWidget.inkDrop(
                                key: const Key('ListJobLoadingAnimation'),
                                color: Palette.bToLight,
                                size: 25),
                          ),
                        )
                      : jobAvailability
                          ? Container(
...
                                        mainAxisAlignment:
                                            MainAxisAlignment.start,
                                        children: [
                                          const Padding(
                                              padding: EdgeInsets.all(12)),
                                          const Icon(Icons.search_off,
                                              key: Key('search_off Icon'),
                                              size: 100,
                                              color: Palette.kToLight),
                                          Text('No results found',
                                              style: GoogleFonts.inter(
                                                  fontSize: 35,
                                                  fontWeight: FontWeight.w500,
                                                  color: Colors.grey.shade800))
                                        ],
                                      ),
...
                                      itemCount:
                                          _searchController.text.isNotEmpty
                                              ? jobListSearch.length
                                              : jobList.length,
                                      itemBuilder: (context, index) {
                                        return JobCard(
                                          key: const Key('JobCard'),
                                          jobInstance:
                                              _searchController.text.isNotEmpty
                                                  ? jobListSearch[index]
                                                  : jobList[index],
                                          refreshJobList: refreshPage,
                                        );
...
