...
class _AuthCardState extends State<AuthCard>
    with SingleTickerProviderStateMixin {
  final GlobalKey<FormState> _formKey = GlobalKey();
  AuthMode _authMode = AuthMode.login;
  // ignore: prefer_final_fields
  Map<String, String> _authData = {
    'email': '',
    'password': '',
  };
  var _adminStatus = false; //collects admin status
  var _isLoading = false;
  final _passwordController = TextEditingController();
  final _emailFocusNode = FocusNode();
  final _passwordFocusNode = FocusNode();
...
                      minHeight: _authMode == AuthMode.signup ? 60 : 0,
                      maxHeight: _authMode == AuthMode.signup ? 180 : 0),
                  curve: Curves.easeIn,
                  child: FadeTransition(
                    opacity: _opacityAnimation!,
                    child: TextFormField(
                      key: const Key('confirmPasswordField'),
                      focusNode: _verifyPasswordFocusNode,
                      enabled: _authMode == AuthMode.signup,
                      decoration:
                          const InputDecoration(labelText: 'Confirm Password'),
                      obscureText: true,
                      validator: (value) => AuthValidator.confirmPassword(
...
                      minHeight: _authMode == AuthMode.signup ? 60 : 0,
                      maxHeight: _authMode == AuthMode.signup ? 180 : 0),
                  curve: Curves.easeIn,
                  child: FadeTransition(
                    opacity: _opacityAnimation!,
                    child: TextFormField(
                      key: const Key('adminKeyField'),
                      enabled: _authMode == AuthMode.signup,
                      decoration: const InputDecoration(
                          labelText: '[Optional] Admin Key'),
                      obscureText: true,
                      validator: (value) {
                        AuthValidator.confirmAdminKey(
...
                //isloading replace...
                _isLoading
                    ? const CircularProgressIndicator(
                        key: Key('authProgressIndicator'),
                      )
                    : RaisedButton(
                        key: const Key('initAuthButton'),
                        child: Text(
                            _authMode == AuthMode.login ? 'LOGIN' : 'SIGN UP'),
                        onPressed: _submit,
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(30),
                        ),
...
                        color: Theme.of(context).primaryColor,
                        textColor: Colors.white,
                        // textColor: Theme.of(context).primaryTextTheme.button.color,
                      ),

                FlatButton(
                  key: const Key('switchAuthMode'),
                  child: Text(
                      '${_authMode == AuthMode.login ? 'SIGNUP' : 'LOGIN'} INSTEAD'),
                  onPressed: _switchAuthMode,
                  padding:
                      const EdgeInsets.symmetric(horizontal: 30.0, vertical: 4),
                  materialTapTargetSize: MaterialTapTargetSize.shrinkWrap,
...
